# core

./: .gitmodules  CMakeLists.txt  README.md
doc/: libhamcast.doxygen
libhamcast/: CMakeLists.txt  FindLibChimera.cmake
libhamcast/include/hamcast/: async_multicast_socket.hpp  config.hpp  exception.hpp  hamcast.hpp  interface_id.hpp  membership_event.hpp  multicast_packet.hpp  multicast_socket.hpp  ref_counted.hpp  socket_id.hpp  uri.hpp
libhamcast/include/hamcast/detail/: client_channel_msg.hpp
libhamcast/include/hamcast/ipc/: api.hpp  channel.hpp  client_channel.hpp  message.hpp  middleware_configuration.hpp  request_id.hpp  sequence_number.hpp  stream_id.hpp  sync_function.hpp
libhamcast/include/hamcast/util/: atomic_operations.hpp  buffered_source.hpp  const_buffer.hpp  deserializer.hpp  future.hpp  id_generator.hpp  mock_mutex.hpp  serialization.hpp  serializer.hpp  single_reader_queue.hpp  sink.hpp  socket_io.hpp  storage_semaphore.hpp  unit.hpp  uri_mappings.hpp
libhamcast/src/: channel.cpp  client_channel.cpp  config_map.cpp  exception.cpp  fake_client_channel.cpp  hamcast.cpp  hamcast_logging.cpp  message.cpp  middleware_configuration.cpp  multicast_packet.cpp  multicast_socket.cpp  serialization.cpp  socket_io.cpp  uri.cpp
middleware/: CMakeLists.txt  FindLibHamcast.cmake
middleware/include/: connection.hpp  rw_spinlock.hpp  send_job.hpp  session.hpp  socket_proxy.hpp  tech_module.hpp
middleware/src/: connection.cpp  main.cpp  rw_spinlock.cpp  send_job.cpp  session.cpp  tech_module.cpp
modules/loopback/: CMakeLists.txt  FindLibHamcast.cmake  loopback.cpp
